# MineManage

./: .gitignore  Cargo.toml  default.nix
src/: child_process.rs  daemon.rs  downloader.rs  main.rs
