[package]
name = "MineManage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
confy = "0.5.1"
serde_json = "1.0.108"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }

